[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/gui/message.png" type="Texture" id=1]
[ext_resource path="res://assets/gui/gameover.png" type="Texture" id=2]
[ext_resource path="res://assets/font/flappy_bird_font.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scripts/interface.gd" type="Script" id=4]
[ext_resource path="res://scenes/sfx.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 12
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Animation/Background:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/path = NodePath("Animation/Background:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/path = NodePath("Animation/Background:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[node name="Interface" type="CanvasLayer" groups=["Interface"]]
script = ExtResource( 4 )
sfx_scene = ExtResource( 5 )

[node name="MessageContainer" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Message" type="Button" parent="MessageContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true

[node name="Texture" type="TextureRect" parent="MessageContainer/Message"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -92.0
margin_top = -133.5
margin_right = 92.0
margin_bottom = 133.5
mouse_filter = 2
texture = ExtResource( 1 )

[node name="GameOver" type="Button" parent="MessageContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
flat = true

[node name="Texture" type="TextureRect" parent="MessageContainer/GameOver"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -92.0
margin_top = -133.5
margin_right = 92.0
margin_bottom = 133.5
mouse_filter = 2
texture = ExtResource( 2 )

[node name="ScoreContainer" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Text" type="Label" parent="ScoreContainer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -60.0
margin_top = 40.0
margin_right = 60.0
margin_bottom = 60.0
rect_min_size = Vector2( 120, 60 )
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1

[node name="ButtonContainer" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Button" type="Button" parent="ButtonContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="Animation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/fade_in = SubResource( 3 )
anims/fade_out = SubResource( 4 )

[node name="Background" type="ColorRect" parent="Animation"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
